added screenshots and update notes

--- a/package.json
+++ b/package.json
@@ -19,20 +19,26 @@
   },
   "dependencies": {
     "@azure/data-tables": "^13.3.1",
+    "@azure/identity": "^4.10.2",
     "@azure/storage-blob": "^12.27.0",
+    "@fontsource/inter": "^5.2.6",
     "@modelcontextprotocol/sdk": "^1.13.0",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "boxen": "^5.1.2",
+    "canvas": "^3.1.2",
     "chalk": "^4.1.2",
     "express": "^4.18.2",
+    "google-fonts-complete": "^2.2.3",
     "inquirer": "^8.2.6",
     "node-fetch": "^2.6.7",
     "ora": "^5.4.1",
+    "sharp": "^0.34.3",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/inquirer": "^8.2.10",
+    "@types/node": "^24.1.0",
     "@types/node-fetch": "^2.6.12",
     "cross-env": "^7.0.3",
     "ts-node": "^10.9.1",
